// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`connectReducer connects reducer with emitter 1`] = `
Object {
  "key": "increment",
  "payload": undefined,
  "reducer": [Function],
  "scope": "",
}
`;

exports[`connectReducer connects reducer with emitter 2`] = `
Object {
  "key": "increment",
  "payload": undefined,
  "reducer": [Function],
  "scope": "sideMenu",
}
`;

exports[`connectReducer connects reducer with emitter 3`] = `
Object {
  "key": "toggle",
  "payload": undefined,
  "reducer": [Function],
  "scope": "sideMenu",
}
`;

exports[`connectReducer connects reducer with emitter 4`] = `
Object {
  "key": "toggle",
  "payload": undefined,
  "reducer": [Function],
  "scope": "sideMenu.child",
}
`;

exports[`connectReducer connects reducer with emitter 5`] = `
Object {
  "key": "toggle",
  "payload": undefined,
  "reducer": [Function],
  "scope": "sideMenu.child",
}
`;
